[project]
name = "unwdef-nodes-comfyui"
description = "Custom nodes for ComfyUI by unwdef."
version = "1.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/unwdef/unwdef-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "unwdef"
DisplayName = "unwdef-nodes-comfyui"
Icon = ""
